--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.4",
+        "rappasoft/laravel-livewire-tables": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
