--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "@iconify-json/ic": "^1.1.17",
         "@iconify-json/material-symbols": "^1.1.78",
         "@iconify/tailwind": "^0.1.4",
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.12",
         "autoprefixer": "^10.4.19",
-        "axios": "^1.6.4",
         "daisyui": "^4.9.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
+        "postcss-nesting": "^12.1.2",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
     }
